0.8.11 (.01.2019)
================
* now htmlTable respects 'align' argument (Issue #20)
* fix 'add_labelled_class' for 'haven' 2.0

0.8.10 (12.12.2018)
================
* 'nest' - more consistent behaviour for 'a %nest% list(x, y, z)`
* 'split_off' now respects data.table and etable classes
* 'xl_write' supports functions in 'additional_cells_formats' argument

0.8.8 (11.11.2018)
================
* add '*.xlsx' export for tables via 'openxlsx' package. See ?xl_write
* add 'set_caption' function and support for it in 'htmlTable', 'as.datatable_widget' and *.xlsx export
* add function 'expss_enable_value_labels_support_extreme'
* small bugfixes and performance improvement
* 'from_text' renamed to 'text_to_columns'
* 'by_groups' is deprecated now. Use 'take' from 'maditr' instead.
* 'dtfrm'/'as.dtfrm' are finally removed. Use 'sheet'/'as.sheet' instead
* 'lst'/'.lst' are removed    

0.8.7 (12.06.2018)
================
* fix long-standing bug with broken html rendering in knitr (issue #6)
* add '..p' and '..f' - perl regular expression/fixed pattern selectors. Also 'mrset_p', 'mrset_f', 'mdset_p', 'mdset_f' are provided.
* add ..data shortcut for entire data.frame in 'use_labels'
* fix awful bug with incorrect nesting multiple response on multiple response ('nest' function)
* more exports from data.table
* fix 'add_columns' for data.table
* fix 'do_if' for data.table
* fix 'w_cor' - now diag elements always equal to one 
* add 'split_by' - alias for 'split_separate'

0.8.6 (24.01.2018)
================
* fix tests for systems with no long doubles support
* new arguments and small improvements in 'write_labelled_csv'/'write_labelled_sps'
* minor fixes
* change 'vlookup'/'vlookup_df' behavior - now it also matches on NA
* 'datatable' is deprecated. Use as.datatable_widget instead.
* move DT and htmltools dependencies from Imports to Suggests
* new function 'add_columns' which is inspired by MATCH FILES (Add variables...) from SPSS Statistics

0.8.4 (11.12.2017)